testing/ftk-1.0/data/2.1/19.txt

FIGURE 4 -~ Fractional deviation ~ as a function of
potential change.8




given by ba' = 2.303 RT/(1 ~ ~')F, with the values of ~' as
shown on the curves (~ = transfer coefficient, n = number
of electrons, and ~ = stoichiometric number).
  An important characteristic demonstrated in Figure 4 is
that the error from the linear polarization assumption is
asymmetric, i.e., greater for anodic polarization than for
cathodic or vice versa, except for the 0.5 curve (ba' =
|bc"|). The asymmetry can be very pronounced, as shown
numerically in Table 2. Listed here is the maximum value
of E ~ E~, below which the linear polarization error remains
less than 5%. The maximum ~E is seen to vary consider-
ably, from 6 to 57 mV, as the anodic Tafel slope is
changed.




TABLE 2 -~ Maximum Usable Value of E ~ E~ for
Error ~~ 5%, bc" = -118.3 mV8




		Maximum |E ~ E~|, mV
	ba'	Anodic		Cathodic
~~	(mV)	Polarization	Polarization

0.1	65.7	6.0		7.0
0.2	74.0	7.7		10.3
0.3	84.5	10.6		56.0
0.4	98.6	16.2		42.5
0.5	118.3	28.6		28.6
0.6	147.9	57.0		18.0
0.7	197.2	14.8		12.2
0.8	296.	8.8		8.4
0.9	592.	6.4		6.5




  Basic information of this type can help the corrosion
engineer decide whether to select anodic or cathodic
polarization for linear polarization measurements on a given
corroding metal. That is not the only choice open, however.
There is a third technique, namely the dual electrode
technique-~an important variation of the small potential
approximation. It combines both anodic and cathodic
polarization in a single measurement. A two-electrode cell is
used, in which the electrodes are duplicate specimens of the
test metal. When a potential difference ~E is applied across
the two electrodes, each experiences a potential change of
0.5 ~E if the two are identical and ~E is small. Therefore,




the slope of the linear polarization curve (I/~E) for dual
electrodes is half of the slope for anode or cathode alone. It
follows that Equation (15A) must be changed to




to calculate corrosion current from dual-electrode measure-
ments.
  The dual electrode technique was first developed in
1963 by Marsh,10 who utilized polarity reversal of the
applied potential so that both a forward current If and a
reverse polarity current Ir were measured. The average of
these meter readings is inserted into Equation (15B) to
calculate I*. In application of this method to real corroding
metals, allowance must be made for the fact that duplicate
test electrodes seldom yield identical corrosion potentials
or corrosion currents. As Marsh showed,10 it is necessary to
determine the starting potential difference between the two
test electrodes 1 and 2, (E~~ - E~~), and to calculate the mean
current as I = 1/2 (If + Ir) when |E~~ - E~~| < |~E| and as I =
1/2 |Ir - If| when |E~~ - E~~| > |~E|.
  Marsh's reversal method has been widely applied in
engineering studies of corrosion resistant metals. In fact, in
the past decade, much more electrochemical corrosion rate
data have been generated by dual-electrode polarization
than by anodic or cathodic polarization singly.
  A simpler dual-electrode procedure, which eliminates
the polarity reversal feature of Marsh's method, was
recently reported.11 It is termed "Direct" method because
I* is calculated directly from a single current I, measured
after increasing the starting potential difference (E~~ - E~~)
by an amount ~Ede. The corrosion current is now




The applied ~Ede can be selected in the range 20 to 50 mV.
This is a higher range than that which can be reliably
employed with anodic or cathodic polarization alone. The
higher range is justified by the extended linear polarization
curves characteristic of dual electrodes.11
  The Direct method yields a mean corrosion current I~~
which is not the arithmetic mean of the corrosion currents
at the individual test electrodes (I~~ and I~~), but is given
by~~~




Note that the mean I* obtained by the Reversal method
also obeys Equation (16).
  Figure 5 gives a convenient circuit and procedure for
the Direct method. While the current circuit is open, cell
emf is measured with the voltmeter in position 1 and the
desired applied voltage is set in position 2. Then the circuit
is closed and the current measured with a zero resistance
ammeter (e.g., Reference 12).
  The Direct method represents a major improvement
over the Reversal method when (E~~ - E~~) is relatively large.
An illustration of this is given in Table 3, based on

